--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -10,3 +10,17 @@
   font-size: 18px;
   line-height: 22px;
 }
+
+@media screen and (max-width: 768px) {
+  .profile__profession{
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .profile__profession{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
