--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,6 +1,21 @@
 .elements{
   padding-top: 51px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  grid-template-columns: repeat(3, 282px);
   gap: 20px 17px;
+}
+
+@media screen and (max-width: 880px) {
+  .elements{
+    grid-template-columns: repeat(2, 282px);
+  }
+  
+}
+
+@media screen and (max-width: 581px) {
+  .elements{
+    grid-template-columns: repeat(1, 282px);
+  }
+  
 }
