--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -15,3 +15,9 @@
 .popup__close-button:hover{
   opacity: 0.6;
 }
+
+@media screen and (max-width: 510px) {
+  .popup__close-button{
+    right: 0;
+  }
+}
