--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -4,4 +4,14 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
+
+  transition: 0.2s;
+}
+
+@media screen and (max-width: 425px) {
+  .popup__text{
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
