--- a/blocks/popup/popup__container/popup__container.css
+++ b/blocks/popup/popup__container/popup__container.css
@@ -4,11 +4,20 @@
   background-color: white;
   display: flex;
   flex-direction: column;
-  padding: 0 36px 0 36px ;
+  padding: 0 36px 0;
 
   position: relative;
 
   box-sizing: border-box;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
+
+  transition: 0.2s;
+}
+
+@media screen and (max-width: 425px) {
+  .popup__container{
+    padding: 0 22px 0;
+    max-width: 282px;
+  }
 }
