--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -3,3 +3,9 @@
   width: 120px;
   border-radius: 50%;
 }
+
+@media screen and (max-width: 907px) {
+  .profile__avatar{
+    margin-left: 27px;
+}
+}
