--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,6 +1,7 @@
 .profile__info{
   margin-left: 30px;
   display: grid;
+  justify-content: start;
   align-items: baseline;
   grid-template-columns: repeat(2, auto);
   gap: 16px 18px;
