--- a/blocks/profile/__nickname/profile__nickname.css
+++ b/blocks/profile/__nickname/profile__nickname.css
@@ -10,3 +10,17 @@
   font-size: 42px;
   line-height: 48px;
 }
+
+@media screen and (max-width: 768px) {
+  .profile__nickname{
+    text-align: center;
+  }  
+}
+
+@media screen and (max-width: 425px) {
+  .profile__nickname{
+    font-weight: 500;
+    font-size: 27px;
+    line-height: 33px;
+  }  
+}
