--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,6 +1,12 @@
 .profile{
   padding-top: 40px;
   width: 100%;
-  height: 120px;
   display: flex;
+}
+
+@media screen and (max-width: 768px) {
+  .profile{
+    flex-direction: column;
+    align-items: center;
+  }
 }
