--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,7 @@
 /*_________________________________________________________ header */
 
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/header__logo.css);
 @import url(../blocks/header/header__line.css);
 
 /*_________________________________________________________ profile */
