--- a/blocks/element/__image/element__image.css
+++ b/blocks/element/__image/element__image.css
@@ -1,5 +1,7 @@
 .element__image{
-  border-radius: 10px 10px 0 0;
+  width: 282px;
+  height: 282px;
   object-fit: contain;
+  border-radius: 10px 10px 0 0;
   grid-column: 1/-1;
 }
