--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,7 @@
   color: #545454;
   width: 100%;
   margin: 0;
-  padding-top: 66px;
+  padding: 48px 0 42px 0;
 
   font-weight: 400;
   font-size: 18px;
@@ -11,18 +11,15 @@
 
 @media screen and (max-width: 907px) {
   .footer{
-    width: 581px;
+    max-width: 581px;
   }
 }
 
 @media screen and (max-width: 581px) {
   .footer{
-    width: 282px;
-  }
-}
+    max-width: 282px;
+    padding: 34px 0 22px 0;
 
-@media screen and (max-width: 425px) {
-  .footer{
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
