--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,13 +1,14 @@
 .header{
   width: 100%;
-  height: 74px;
+  min-height: 74px;
   padding-top: 45px;
 
-  position: relative;
+  border-bottom: 1px solid rgba(84, 84, 84, 07);
 }
 
 @media screen and (max-width: 425px) {
   .header{
-    height: 56px;
+    min-height: 56px;
+    padding-top: 28px;
   }
 }
