--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -2,6 +2,7 @@
   width: 32px;
   height: 32px;
   background: url(../../../images/Close\ Icon.svg) center no-repeat;
+  background-size: 32px 32px;
   border: none;
 
   position: absolute;
@@ -18,6 +19,9 @@
 
 @media screen and (max-width: 525px) {
   .popup__close-button{
+    width: 20px;
+    height: 20px;
     right: 0;
+    background-size: 20px 20px;
   }
 }
