--- a/blocks/popup/__text/popup__text.css
+++ b/blocks/popup/__text/popup__text.css
@@ -10,8 +10,8 @@
 
 @media screen and (max-width: 425px) {
   .popup__text{
-    font-weight: 900;
     font-size: 18px;
     line-height: 22px;
+    margin-top: 25px;
   }
 }
