--- a/fonts/Inter/Inter.css
+++ b/fonts/Inter/Inter.css
@@ -11,9 +11,9 @@
 @font-face {
   font-family: 'Inter';
   src: local('Inter'),
-  url('./Inter-Bold.woff2') format('woff2'), 
-  url('./Inter-Bold.woff') format('woff');
-  font-weight: 700;
+  url('./Inter-Medium.woff2') format('woff2'), 
+  url('./Inter-Medium.woff') format('woff');
+  font-weight: 500;
   font-style: normal;
 }
 
