--- a/blocks/element/__like-button/element__like-button.css
+++ b/blocks/element/__like-button/element__like-button.css
@@ -14,6 +14,6 @@
   opacity: 0.5;
 }
 
-.element__like-button:active{
+/* .element__like-button:active{
   background: url(../../../images/like\ Button\ active.svg) center no-repeat;
-}
+} */
