--- a/pages/index.css
+++ b/pages/index.css
@@ -39,6 +39,7 @@
 @import url(../blocks/element/__image/element__image.css);
 @import url(../blocks/element/__text/element__text.css);
 @import url(../blocks/element/__like-button/element__like-button.css);
+@import url(../blocks/element/__like-button/_active/element__like-button_active.css);
 
 /*_________________________________________________________ footer */
 
