--- a/pages/index.css
+++ b/pages/index.css
@@ -40,6 +40,7 @@
 @import url(../blocks/element/__text/element__text.css);
 @import url(../blocks/element/__like-button/element__like-button.css);
 @import url(../blocks/element/__like-button/_active/element__like-button_active.css);
+@import url(../blocks/element/__delete-button/element__delete-button.css);
 
 /*_________________________________________________________ footer */
 
