--- a/pages/index.css
+++ b/pages/index.css
@@ -31,6 +31,8 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__container-image/popup__container-image.css);
 
 /*_________________________________________________________ elements */
 
