--- a/blocks/popup/_opened/popup_opened.css
+++ b/blocks/popup/_opened/popup_opened.css
@@ -1,6 +1,21 @@
 .popup_opened{
   display: flex;
+  opacity: 1;
 
-  opacity: 0;
-  transition: 0.5s;
+  animation: popupVisible 0.5s;
+}
+
+@keyframes popupVisible {
+  0% {
+    display: none;
+    opacity: 0;
+  }
+  1% {
+    display: flex;
+    opacity: 0;
+  }
+  100% {
+    display: flex;
+    opacity: 1;
+  }
 }
