--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,10 +7,27 @@
   top: 0;
   left: 0;
 
+
   display: none;
+  opacity: 0;
   justify-content: center;
   align-items: center;
 
-  /* opacity: 0; */
-  /* transition: opacity 4s; */
+  animation: popupInVisible 2s;
+}
+
+
+@keyframes popupInVisible {
+  0% {
+    display: flex;
+    opacity: 1;
+  }
+  1% {
+    display: flex;
+    opacity: 0;
+  }
+  100% {
+    display: none;
+    opacity: 0;
+  }
 }
