--- a/pages/index.css
+++ b/pages/index.css
@@ -33,6 +33,7 @@
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__container-image/popup__container-image.css);
+@import url(../blocks/popup/_type/popup_type_image.css);
 
 /*_________________________________________________________ elements */
 
