--- a/blocks/popup/__container-image/popup__container-image.css
+++ b/blocks/popup/__container-image/popup__container-image.css
@@ -1,3 +1,8 @@
 .popup__container-image{
+  margin: 90px;
+  max-width: calc(100% - 180px);
+  max-height: calc(100% - 180px);
   position: relative;
+
+  box-sizing: border-box;
 }
