--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,7 @@
 
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/_closed/popup_closed.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__text/popup__text.css);
@@ -34,6 +35,7 @@
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__container-image/popup__container-image.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
+@import url(../blocks/popup/__image-text/popup__image-text.css);
 
 /*_________________________________________________________ elements */
 
