--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,8 +7,11 @@
   top: 0;
   left: 0;
 
-  display: none;
+  display: flex;
+  transition: visibility linear .2s, opacity .2s linear;
+  visibility: hidden;
   opacity: 0;
+
   justify-content: center;
   align-items: center;
 }
