--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -1,24 +1,22 @@
-.popup__input{
+.form__input{
+  width: 100%;
   height: 27px;
   margin: 54px 0 0;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
 
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
 }
 
-.popup__input:required{
-  border: 1px red solid;
-}
-
-.popup__input:last-of-type {
+.form__input:last-of-type {
   margin: 30px 0 0;
 }
 
 @media screen and (max-width: 425px) {
-  .popup__input{
+  .form__input{
     margin-top: 75px;
   }
 }
