--- a/blocks/form/__save-button/form__save-button.css
+++ b/blocks/form/__save-button/form__save-button.css
@@ -1,4 +1,4 @@
-.popup__save-button{
+.form__save-button{
   height: 50px;
   margin: 48px 0 37px;
   color: white;
@@ -14,12 +14,12 @@
   transition: 0.2s;
 }
 
-.popup__save-button:hover{
+.form__save-button:hover{
   opacity: 0.8;
 }
 
 @media screen and (max-width: 425px) {
-  .popup__save-button{
+  .form__save-button{
     font-size: 14px;
     line-height: 17px;
     margin: 45px 0 25px;
