--- a/pages/index.css
+++ b/pages/index.css
@@ -28,13 +28,25 @@
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__text/popup__text.css);
-@import url(../blocks/popup/__form/popup__form.css);
-@import url(../blocks/popup/__input/popup__input.css);
+
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__container-image/popup__container-image.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
 @import url(../blocks/popup/__image-text/popup__image-text.css);
+
+/*_________________________________________________________ form */
+
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__field/form__field.css);
+@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__placeholder/form__placeholder.css);
+@import url(../blocks/form/__input-error/form__input-error.css);
+@import url(../blocks/form/__input/_type/form__input_type_error.css);
+@import url(../blocks/form/__input-error/_active/form__input-error_active.css);
+
+@import url(../blocks/form/__save-button/form__save-button.css);
+@import url(../blocks/form/__save-button/_inactive/form__save-button_inactive.css);
 
 /*_________________________________________________________ elements */
 
