--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,6 @@
 @import url(../vendor/normalize.css); /* нормалайзер */
 
-@import url(../fonts/Inter/Inter.css); /* шривты */
+@import url(../vendor/fonts/Inter/Inter.css); /* шривты */
 
 @import url(../blocks/page/page.css); /* body */
 
@@ -29,7 +29,6 @@
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__text/popup__text.css);
 
-@import url(../blocks/popup/__save-button/popup__save-button.css);
 @import url(../blocks/popup/__image/popup__image.css);
 @import url(../blocks/popup/__container-image/popup__container-image.css);
 @import url(../blocks/popup/_type/popup_type_image.css);
