--- a/blocks/element/__delete-button/element__delete-button.css
+++ b/blocks/element/__delete-button/element__delete-button.css
@@ -2,7 +2,7 @@
   width: 18px;
   height: 19px;
 
-  background: url(../../../images/delete\ button.svg) center no-repeat;
+  background: url(../../../src/images/delete\ button.svg) center no-repeat;
   border: none;
 
   position: absolute;
