--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,7 +1,7 @@
 .popup__close-button{
   width: 32px;
   height: 32px;
-  background: url(../../../images/CloseIcon.svg) center no-repeat;
+  background: url(../../../src/images/CloseIcon.svg) center no-repeat;
   background-size: 32px 32px;
   border: none;
 
