--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -4,7 +4,7 @@
   margin: auto  0 auto auto;
   padding: 0;
 
-  background: url(../../../images/Plus.svg) center no-repeat black;
+  background: url(../../../src/images/Plus.svg) center no-repeat black;
   background-size: 22px;
   border: 2px solid white;
   border-radius: 2px;
