--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,7 +4,7 @@
   height: 24px;
   object-fit: contain;
 
-  background: url(../../../src/images/Edit\ Button.svg) center no-repeat black;
+  background: url(../../../src/images/EditButton.svg) center no-repeat black;
     background-size: 24px;
     border: none;
   
