--- a/blocks/element/__delete-button/element__delete-button.css
+++ b/blocks/element/__delete-button/element__delete-button.css
@@ -1,4 +1,5 @@
-.element__delete-button{
+.element__delete-button {
+  display: block;
   width: 18px;
   height: 19px;
 
@@ -13,7 +14,6 @@
   transition: 0.2s;
 }
 
-.element__delete-button:hover{
+.element__delete-button:hover {
   opacity: 0.5;
-
 }
