--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -14,10 +14,13 @@
 /*_________________________________________________________ profile */
 
 @import url(../../blocks/profile/profile.css);
+@import url(../../blocks/profile/__container/profile__container.css);
+@import url(../../blocks/profile/__avatar-edit/profile__avatar-edit.css);
 @import url(../../blocks/profile/__avatar/profile__avatar.css);
 @import url(../../blocks/profile/__info/profile__info.css);
 @import url(../../blocks/profile/__nickname/profile__nickname.css);
 @import url(../../blocks/profile/__profession/profile__profession.css);
+@import url(../../blocks/profile/__id/profile__id.css);
 @import url(../../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../../blocks/profile/__add-button/profile__add-button.css);
 
@@ -57,6 +60,7 @@
 @import url(../../blocks/element/__like-button/_active/element__like-button_active.css);
 @import url(../../blocks/element/__like/element__like.css);
 @import url(../../blocks/element/__delete-button/element__delete-button.css);
+@import url(../../blocks/element/__delete-button/_inactive/element__delete-button_inactive.css);
 @import url(../../blocks/element/__likes-nombre/element__likes-nombre.css);
 
 /*_________________________________________________________ footer */
